--- a/JenkinsPractice/.classpath
+++ b/JenkinsPractice/.classpath
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/dell/Downloads/selenium-2.48.2-20220515T043605Z-001/selenium-2.48.2/libs/apache-mime4j-0.6.jar"/>
 	<classpathentry kind="lib" path="C:/Users/dell/Downloads/selenium-2.48.2-20220515T043605Z-001/selenium-2.48.2/libs/bsh-2.0b4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/dell/Downloads/selenium-2.48.2-20220515T043605Z-001/selenium-2.48.2/libs/cglib-nodep-2.1_3.jar"/>
@@ -134,5 +143,10 @@
 	<classpathentry kind="lib" path="C:/Users/dell/Downloads/selenium-java-4.2.1/selenium-safari-driver-4.2.1-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/dell/Downloads/selenium-java-4.2.1/selenium-support-4.2.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/dell/Downloads/selenium-java-4.2.1/selenium-support-4.2.1-sources.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
